# pycli

./: README.rst  pyproject.toml
pycli/: __main__.py  cli.py
tests/: test_pycli.py
