[tool.poetry]
name = "pycli"
version = "0.1.1"
description = "A package for easy command line argument parsing"
authors = ["Cory Laughlin <corylcomposinger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
